[gd_scene load_steps=2 format=3 uid="uid://0ilxb0yfg6h1"]

[ext_resource type="Script" uid="uid://c0w5sru1uifvg" path="res://addons/DansInventory/Inventory/Scenes/inventory.gd" id="1_6lnpx"]

[node name="Inventory" type="PanelContainer" groups=["inventories"]]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6lnpx")
inventory_name = null

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="InventoryName" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="FocusButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Focus Inventory"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemGrid" type="GridContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
columns = 5

[connection signal="pressed" from="VBoxContainer/FocusButton" to="." method="_on_focus_button_pressed"]
